--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archrn-cli",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "\"Package for your kickstarting your react-native project\"",
   "main": "lib/arch.js",
   "bin": {
@@ -11,8 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "esw src",
     "clean": "rm -rf lib && mkdir lib",
-    "prepublish": "node_modules/.bin/babel src --out-dir lib",
-    "build-arch": "node_modules/.bin/babel src --out-dir lib",
+    "prepublish": "node_modules/.bin/babel src --out-dir lib  --copy-files",
+    "build-arch": "node_modules/.bin/babel src --out-dir lib  --copy-files",
     "build": "npm run clean && npm run build-arch"
   },
   "repository" :
@@ -23,7 +23,15 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.1.2",
-    "commander": "^2.11.0"
+    "commander": "^2.11.0",
+    "bluebird": "^3.5.1",
+    "chalk": "^2.3.0",
+    "inquirer": "^3.3.0",
+    "package-json": "^4.0.1",
+    "pkg-versions": "^1.1.0",
+    "prompt": "^1.0.0",
+    "ramda": "^0.25.0",
+    "semver": "^5.4.1"
   },
   "files": [
     "README.md",
@@ -43,6 +51,11 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^3.18.0",
     "eslint-watch": "^3.0.1"
   }
